[gd_scene load_steps=5 format=3 uid="uid://b78guoeubqseh"]

[ext_resource type="Script" uid="uid://dwtk4qqasp13b" path="res://RTS-System/Player/PlayerInput.gd" id="1_ib60y"]
[ext_resource type="Script" uid="uid://bhdxffem17s30" path="res://RTS-System/Player/Player.gd" id="1_qjed2"]
[ext_resource type="Script" uid="uid://d2y2w3vn7wtfw" path="res://RTS-System/Player/CameraController.gd" id="2_cliar"]
[ext_resource type="PackedScene" uid="uid://44m1veg1thkm" path="res://RTS-System/Player/PlayerUI.tscn" id="3_cliar"]

[node name="PlayerObject" type="Node2D"]
script = ExtResource("1_qjed2")

[node name="PlayerInput" type="Node2D" parent="."]
script = ExtResource("1_ib60y")

[node name="PlayerCameraController" type="Node2D" parent="."]
script = ExtResource("2_cliar")

[node name="PlayerCamera" type="Camera2D" parent="."]
enabled = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource("3_cliar")]
position = Vector2(960, 540)

[node name="BoxSelection" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(1, 1, 1, 0.0980392)
